# Analyzing-text-tone

./: README.md
backend/: pyproject.toml
backend/src/: d.py  data_analyses.py  data_service.py  starter.py  text_service.py
